--- a/web/src/components/typography.module.css
+++ b/web/src/components/typography.module.css
@@ -1,23 +1,13 @@
 @import '../styles/media-queries.css';
 
-:root {
-  --base-unit: 17;
+.global {
+  -webkit-font-smoothing: antialiased;
+  font-smooth: always;
+  font-family: Lato, sans-serif;
+}
 
-  /* Font sizes */
-  --font-micro-size: calc(8 / var(--base-unit) * 1rem);
-  --font-micro-line-height: 1;
-  --font-small-size: calc(14 / var(--base-unit) * 1rem);
-  --font-small-line-height: calc(18 / 14);
-  --font-base-size: calc(var(--base-unit) / 16 * 100%);
-  --font-base-line-height: calc(22 / var(--base-unit));
-  --font-large-size: calc(19 / var(--base-unit) * 1rem);
-  --font-large-line-height: calc(24 / 19);
-  --font-title3-size: calc(24 / var(--base-unit) * 1rem);
-  --font-title3-line-height: calc(28 / 24);
-  --font-title2-size: calc(32 / var(--base-unit) * 1rem);
-  --font-title2-line-height: calc(36 / 32);
-  --font-title1-size: calc(44 / var(--base-unit) * 1rem);
-  --font-title1-line-height: calc(56 / 44);
+%headings {
+  font-family: Montserrat, sans-serif;
 }
 
 
@@ -27,39 +17,95 @@
  */
 
 .title1 {
-  font-size: var(--font-title1-size);
-  line-height: var(--font-title1-line-height);
+  @extend %headings;
+  color: #222222;
+  font-size: 36px;
+  font-weight: 600;
+  letter-spacing: -0.23px;
+  line-height: 1.2;
+
+  @media (--media-min-large) {
+    font-size: 42px;
+    letter-spacing: -0.27px;
+  }
+
+  @media (--media-min-xl) {
+    font-size: 48px;
+    letter-spacing: -0.3px;
+  }
 }
 
 .title2 {
-  font-size: var(--font-title2-size);
-  line-height: var(--font-title2-line-height);
+  @extend %headings;
+  color: #333333;
+  font-size: 30px;
+  font-weight: bold;
+  letter-spacing: -0.19px;
+  line-height: 1.23;
+
+  @media (--media-min-large) {
+    font-size: 35px;
+    font-weight: bold;
+    letter-spacing: -0.22px;
+  }
+
+  @media (--media-min-xl) {
+    font-size: 40px;
+    font-weight: bold;
+    letter-spacing: -0.25px;
+  }
 }
 
 .title3 {
-  font-size: var(--font-title3-size);
-  line-height: var(--font-title3-line-height);
+  @extend %headings;
+  color: #222222;
+  font-size: 28px;
+  font-weight: bold;
+  letter-spacing: -0.23px;
+  line-height: 1.21;
+
+  @media (--media-min-large) {
+    font-size: 32px;
+    font-weight: bold;
+    letter-spacing: -0.26px;
+    line-height: 1.22;
+  }
+
+  @media (--media-min-xl) {
+    font-size: 36px;
+    font-weight: bold;
+    letter-spacing: -0.3px;
+    line-height: 1.22;
+  }
 }
 
-.large {
-  font-size: var(--font-large-size);
-  line-height: var(--font-large-line-height);
+.title4 {
+  @extend %headings;
+  color: #444444;
+  font-size: 24px;
+  font-weight: bold;
+  letter-spacing: -0.21px;
+  line-height: 1.2;
+
+  @media (--media-min-large) {
+    h4 {
+      font-size: 27px;
+      letter-spacing: -0.22px;
+    }
+  }
+
+  @media (--media-min-xl) {
+    font-size: 30px;
+    letter-spacing: -0.26px;
+  }
 }
+
+
+
 
 .base {
   font-size: inherit;
   line-height: inherit;
-}
-
-.small {
-  font-size: var(--font-small-size);
-  line-height: var(--font-small-line-height);
-}
-
-.micro {
-  font-size: var(--font-micro-size);
-  line-height: var(--font-micro-line-height);
-  text-transform: uppercase;
 }
 
 
@@ -69,88 +115,37 @@
  */
 
 .paragraph {
-  font-size: var(--font-base-size);
-  line-height: var(--font-base-line-height);
-  margin: 0.5rem 0 1rem 0;
+  color: #444444;
+  font-size: 20px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  line-height: 1.65;
 
-  @media (--media-min-small) {
-    font-size: var(--font-base-size);
-    line-height: var(--font-base-line-height);
+  @media (--media-min-large) {
+    font-size: 24px;
+    letter-spacing: 0.6px;
   }
 
-  @media (--media-min-medium) {
-    font-size: var(--font-large-size);
-    line-height: var(--font-large-line-height);
+  @media (--media-min-xl) {
+    font-size: 28px;
+    letter-spacing: 0.65px;
+  }
+}
+
+.large {
+  color: #222222;
+  font-size: 24px;
+  font-weight: 500;
+
+  @media (--media-min-large) {
+    font-size: 29px;
+  }
+
+  @media (--media-min-xl) {
+    font-size: 34px;
   }
 }
 
 .blockQuote {
   background: #eee;
-}
-
-.responsiveTitle1 {
-  font-weight: 900;
-  font-size: var(--font-title3-size);
-  line-height: var(--font-title3-line-height);
-  margin: 1rem 0 2rem;
-
-  @media (--media-min-small) {
-    font-size: var(--font-title2-size);
-    line-height: var(--font-title2-line-height);
-  }
-
-  @media (--media-min-medium) {
-    font-size: var(--font-title1-size);
-    line-height: var(--font-title1-line-height);
-  }
-}
-
-.responsiveTitle2 {
-  font-weight: 900;
-  font-size: var(--font-large-size);
-  line-height: var(--font-large-line-height);
-  margin: 1.5rem 0 0.5rem;
-
-  @media (--media-min-small) {
-    font-size: var(--font-title3-size);
-    line-height: var(--font-title3-line-height);
-  }
-
-  @media (--media-min-medium) {
-    font-size: var(--font-title2-size);
-    line-height: var(--font-title2-line-height);
-  }
-}
-
-.responsiveTitle3 {
-  font-weight: 900;
-  font-size: var(--font-large-size);
-  line-height: var(--font-large-line-height);
-  margin: 1rem 0 0.5rem;
-
-  @media (--media-min-small) {
-    font-size: var(--font-large-size);
-    line-height: var(--font-large-line-height);
-  }
-
-  @media (--media-min-medium) {
-    font-size: var(--font-title3-size);
-    line-height: var(--font-title3-line-height);
-  }
-}
-
-.responsiveTitle4 {
-  font-size: var(--font-base-size);
-  line-height: var(--font-base-line-height);
-  margin: 1rem 0 0.5rem;
-
-  @media (--media-min-small) {
-    font-size: var(--font-base-size);
-    line-height: var(--font-base-line-height);
-  }
-
-  @media (--media-min-medium) {
-    font-size: var(--font-large-size);
-    line-height: var(--font-large-line-height);
-  }
 }
