--- a/web/src/components/Navbar/Navbar.module.css
+++ b/web/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 @import '../../styles/media-queries.css';
 
-.nav {
+.container {
   display: flex;
   padding: 19px 30px;
   height: 70px;
@@ -8,24 +8,34 @@
   justify-content: space-between;
   align-items: center;
 
+  position: sticky;
+  top: 0;
+  background: #fff;
+  z-index: 10;
+
   @media (--media-min-large) {
     padding: 23px 40px;
   }
 }
 
-.nav__logo {
+.logo {
   flex: 0 0 94px;
   width: 94px;
   height: 100%;
   margin-right: 12px;
 
   @media (--media-min-large) {
-    flex-basis: 94px;
-    width: 94px;
+    margin-top: -20px;
+    flex-basis: 150px;
+    width: 150px;
   }
 }
 
-.nav__links {
+.logoLink {
+  display: inline-block;
+}
+
+.links {
   display: flex;
   flex-flow: column nowrap;
 
@@ -45,14 +55,6 @@
   pointer-events: none;
 
   transition: transform 0.35s ease-out, opacity 0.15s ease-out 0.1s;
-
-  @media (--media-max-large) {
-    &.open {
-      pointer-events: auto;
-      opacity: 1;
-      transform: translateX(0);
-    }
-  }
 
   @media (--media-min-large) {
     pointer-events: auto;
@@ -78,19 +80,30 @@
   }
 }
 
+.linksOpen {
+  @media (--media-max-large) {
+    pointer-events: auto;
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
 
-.nav__close {
+.closeContainer {
   position: absolute;
   top: 25px;
   right: 25px;
+
+  @media (--media-min-large) {
+    display: none;
+  }
 }
 
-.nav__close a:link {
+.close {
   font-size: 1.25em;
   color: #666;
 }
 
-.nav__link-container {
+.linkContainer {
   margin: 15px 0;
 
   @media (--media-min-large) {
@@ -106,8 +119,8 @@
 &link-base {
   text-transform: uppercase;
   text-decoration: none;
-  opacity: .5;
-  transition: opacity .35s;
+  opacity: 0.5;
+  transition: opacity 0.35s;
   font-size: 13px;
 
   &:hover {
@@ -115,8 +128,7 @@
   }
 }
 
-
-a:link.nav__link {
+.link {
   @extend &link-base;
 
   display: block;
@@ -140,24 +152,20 @@ a:link.nav__link {
     font-size: 13px;
     letter-spacing: 1.75px;
     line-height: 15px;
-}
+  }
 
-
-}
-
-@media (min-width: 1100px) {
-  .nav__link {
+  @media (--media-min-xl) {
     font-size: 14px;
     letter-spacing: 1.75px;
     line-height: 18px;
   }
 }
 
-.nav__phone {
+.phoneContainer {
   flex: 0 0 auto;
 }
 
-.nav__phone-link {
+.phone {
   @extend &link-base;
 
   color: #666666;
@@ -184,14 +192,8 @@ a:link.nav__link {
   }
 }
 
-@media (max-width: 900px) {
-  .desktop {
-    display: none;
-  }
-}
-
-@media (min-width: 899px) {
-  .mobile {
+.mobileMenu {
+  @media (--media-min-large) {
     display: none;
   }
 }
