--- a/web/src/components/Heading/heading.module.css
+++ b/web/src/components/Heading/heading.module.css
@@ -1,7 +1,7 @@
 @import '../../components/typography.module.css';
 
 .container {
-  padding-top: 20vw;
+  padding-top: 20vh;
   padding-bottom: 2vw;
 
   position: relative;
