--- a/web/src/components/typography.module.css
+++ b/web/src/components/typography.module.css
@@ -10,8 +10,6 @@
   font-family: Montserrat, sans-serif;
 }
 
-
-
 /*
  * Statically sized elements
  */
@@ -100,15 +98,10 @@
   }
 }
 
-
-
-
 .base {
   font-size: inherit;
   line-height: inherit;
 }
-
-
 
 /*
  * Responsively sized elements
@@ -128,6 +121,22 @@
 
   @media (--media-min-xl) {
     font-size: 28px;
+    letter-spacing: 0.65px;
+  }
+}
+
+.small {
+  @extend .paragraph;
+  font-size: 16px;
+  color: #555;
+
+  @media (--media-min-large) {
+    font-size: 18px;
+    letter-spacing: 0.6px;
+  }
+
+  @media (--media-min-xl) {
+    font-size: 20px;
     letter-spacing: 0.65px;
   }
 }
