--- a/web/src/components/Contact/styles.module.css
+++ b/web/src/components/Contact/styles.module.css
@@ -36,6 +36,7 @@
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
+  margin-top: 25px;
 
   color: #222222;
   font-family: Lato;
