--- a/web/src/components/PhoneNumbers/PhoneNumbers.module.css
+++ b/web/src/components/PhoneNumbers/PhoneNumbers.module.css
@@ -1,9 +1,10 @@
 @import '../../styles/media-queries.css';
+@import '../typography.module.css';
 
 .container {
   display: flex;
   flex-flow: column nowrap;
-  margin: 37px 0 0;
+  margin: 2em 0 0;
   text-align: center;
 
   @media (--media-min-large) {
@@ -16,8 +17,9 @@
 .vertical {
   @media (--media-min-large) {
     flex-flow: column nowrap;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
+    text-align: left;
   }
 }
 
@@ -35,6 +37,8 @@
 }
 
 .link {
+  @extend .a;
+
   font-size: 24px;
   line-height: 1.5;
 
