--- a/web/src/components/Safety/styles.module.css
+++ b/web/src/components/Safety/styles.module.css
@@ -26,7 +26,9 @@
 
 .img {
   img {
-    position: static !important;
+    @media (--media-min-large) {
+      position: static !important;
+    }
   }
 
   @media (--media-min-large) {
