--- a/web/src/components/blog-post-preview.module.css
+++ b/web/src/components/blog-post-preview.module.css
@@ -1,7 +1,28 @@
+@import './typography.module.css';
+@import '../styles/media-queries.css';
+
 .root {
-  display: block;
+  display: flex;
   color: inherit;
   text-decoration: none;
+  flex-direction: column;
+  margin: 75px 0;
+
+  @media (--media-min-medium) {
+    flex-direction: row;
+  }
+
+  @media (--media-min-large) {
+    margin: 150px 0;
+  }
+
+  &:first-child {
+    margin-top: 0;
+  }
+}
+
+.headingImage {
+  flex: 1 2 50%;
 }
 
 .leadMediaThumb {
@@ -20,19 +41,22 @@
 }
 
 .title {
-  @media (hover: hover) {
-    @nest .root:hover & {
-      text-decoration: underline;
-    }
+  @extend .title4;
+  margin-top: 25px;
+
+  @media (--media-min-medium) {
+    margin-top: 0;
+  }
+}
+
+.content {
+  flex: 1 1 50%;
+
+  @media (--media-min-medium) {
+    padding-left: 25px;
   }
 }
 
 .excerpt {
-  @nest & p {
-    margin: 0.5em 0;
-  }
-
-  @nest & strong {
-    font-weight: 600;
-  }
+  @extend .small;
 }
