--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -4,7 +4,14 @@
 .root {}
 
 .title {
-  composes: responsiveTitle1 from './typography.module.css';
+  z-index: 2;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  color: white;
+  padding: 1em;
+  text-align: center;
 }
 
 .mainImage {
