--- a/web/src/components/typography.module.css
+++ b/web/src/components/typography.module.css
@@ -8,6 +8,11 @@
 
 %headings {
   font-family: Montserrat, sans-serif;
+  margin: 1.25em 0 .85em;
+
+  .light {
+    color: white;
+  }
 }
 
 /*
@@ -112,7 +117,7 @@
   font-size: 20px;
   font-weight: 500;
   letter-spacing: 0.5px;
-  line-height: 1.65;
+  line-height: 1.4;
 
   @media (--media-min-large) {
     font-size: 24px;
@@ -145,6 +150,7 @@
   color: #222222;
   font-size: 24px;
   font-weight: 500;
+  line-height: 1.35;
 
   @media (--media-min-large) {
     font-size: 29px;
@@ -157,4 +163,38 @@
 
 .blockQuote {
   background: #eee;
+}
+
+.list {
+  padding-left: 2em;
+  margin: 1.25em 0;
+}
+
+.li {
+  @extend .paragraph;
+
+  font-size: 18px;
+
+  @media (--media-min-large) {
+    font-size: 22px;
+  }
+
+  @media (--media-min-xl) {
+    font-size: 25px;
+  }
+  
+  list-style-type: disc;
+}
+
+.a {
+  &:link {
+    color: #58b146;
+
+    transition: all 0.15s ease-in-out;
+    text-decoration: underline;
+  }
+
+  &:hover {
+    opacity: 0.7;
+  }
 }
