--- a/web/src/components/address-block/address-block.module.css
+++ b/web/src/components/address-block/address-block.module.css
@@ -1,9 +1,29 @@
 @import '../typography.module.css';
+@import '../../styles/media-queries.css';
 
 .container {
   margin: 1.5em 0;
+
+  text-align: center;
+
+  @media (--media-min-large) {
+    text-align: left;
+  }
+}
+
+.address-block {
+  margin: 25px 0;
 }
 
 .row {
   @extend .paragraph;
+}
+
+.label {
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.email {
+  @extend .a;
 }
