--- a/web/src/pages/internal.module.css
+++ b/web/src/pages/internal.module.css
@@ -1,9 +1,10 @@
 @import '../styles/media-queries.css';
+@import '../styles/layout.css';
 
 .pageContent {
-  padding: 6vw 4vw;
+  @extend %section;
+
   max-width: 968px;
-  margin: 0 auto;
 
   @media (min-width: 1000px) {
     padding-right: 0;
