--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -1,4 +1,5 @@
 @import './vars.css';
+@import './media-queries.css';
 
 html {
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
@@ -23,4 +24,9 @@ html, body {
 
   margin-left: auto;
   margin-right: auto;
+
+  @media (--media-min-large) {
+    padding-top: 10vw;
+    padding-bottom: 10vw;
+  }
 }
