--- a/web/src/pages/internal.module.css
+++ b/web/src/pages/internal.module.css
@@ -28,3 +28,13 @@
     margin: auto;
   }
 }
+
+.four04 {
+  width: 100%;
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;  
+}
