--- a/web/src/components/Form/form.module.css
+++ b/web/src/components/Form/form.module.css
@@ -1,4 +1,5 @@
 @import '../../styles/media-queries.css';
+@import '../typography.module.css';
 
 .container {
   @media (--media-min-large) {
@@ -11,6 +12,11 @@
   flex-flow: column nowrap;
   justify-content: stretch;
   align-items: center;
+
+  &.loading {
+    opacity: .7;
+    pointer-events: none;
+  }
 }
 
 .input,
@@ -60,19 +66,24 @@
   opacity: 0.75;
 }
 
-.success {
-  background: #16702d;
+.success,
+.error {
+  @extend .small;
+
   color: white;
-  padding: 8px;
+  padding: 8px 16px;
   width: 100%;
   box-sizing: border-box;
+  border-radius: 3px;
+}
+
+.success {
+  background: #16702d;
+  border: 1px solid #105822;
 }
 
 .error {
   background: #8b0c0c;
-  color: white;
-  padding: 8px;
-  width: 100%;
-  box-sizing: border-box;
+  border: 1px solid #5a0808;
 }
 
