--- a/web/src/components/Heading/heading.module.css
+++ b/web/src/components/Heading/heading.module.css
@@ -39,3 +39,13 @@
     padding-left: 0;
   }
 }
+
+.bottomShadow {
+  box-shadow: inset 0 -95px 45px rgb(0 0 0 / 30%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+}
