--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -12,6 +12,8 @@
   color: white;
   padding: 1em;
   text-align: center;
+  margin-bottom: 0;
+  box-shadow: inset 0 -110px 45px rgb(0 0 0 / 30%);
 }
 
 .mainImage {
